mongo-db-simple-webapp/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-express
  name: mongodb-express-deployment  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - image: mongo-express
        name: mongo-express
        ports:
        - containerPort: 8081
        env: # need these env for mongo express to connect with mongo db
        - name: ME_CONFIG_MONGODB_ADMINUSERNAME
          valueFrom: 
            secretKeyRef: 
              name: mongodb-secret
              key: mongo-root-username

        - name: ME_CONFIG_MONGODB_ADMINPASSWORD
          valueFrom:
            secretKeyRef: 
              name: mongodb-secret
              key: mongo-root-password

        - name: ME_CONFIG_MONGODB_SERVER
          valueFrom:
            configMapKeyRef: 
              name: mongodb-configmap
              key: database_url
---
  apiVersion: v1
  kind: Service
  metadata:
    name: mongodb-express-service
    labels:
      app: mongo-express
  spec:
    type: LoadBalancer # this is what makes it an external service
    selector:
      app: mongo-express
    ports:
      - protocol: TCP
        port: 8081
        targetPort: 8081 # container port 
        nodePort: 30000 # this is the port that will be exposed outside.
